fix: add empty string

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ HOARDER_SERVER_URL=https://your-hoarder-instance.com
 NOTIFICATION_METHOD=email  # or discord
 NOTIFICATION_FREQUENCY=daily  # or weekly, monthly
 BOOKMARKS_COUNT=3
-SPECIFIC_LIST_ID=  # Leave empty for all bookmarks
+SPECIFIC_LIST_ID=''  # Leave empty for all bookmarks
 
 # Email configuration (required if NOTIFICATION_METHOD=email)
 EMAIL_SERVICE=gmail
