feat: timezone and notification time customization

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ NOTIFICATION_METHOD=email  # or discord
 NOTIFICATION_FREQUENCY=daily  # or weekly, monthly
 BOOKMARKS_COUNT=3
 SPECIFIC_LIST_ID=''  # Leave empty for all bookmarks
+TIMEZONE=America/New_York  # Your local timezone (e.g., America/New_York, Europe/London, etc.)
+TIME_TO_SEND=09:00  # Time to send in 24-hour format (HH:MM)
 
 # Email configuration (required if NOTIFICATION_METHOD=email)
 EMAIL_SERVICE=gmail
