--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ HOARDER_API_KEY=your_api_key_here
 HOARDER_SERVER_URL=https://your-hoarder-instance.com
 
 # Notification settings
-NOTIFICATION_METHOD=email  # Options: email, discord, or rss
+NOTIFICATION_METHOD=email  # Options: email, discord, mattermost, or rss
 NOTIFICATION_FREQUENCY=daily  # or weekly, monthly
 BOOKMARKS_COUNT=3
 SPECIFIC_LIST_ID=''  # Leave empty for all bookmarks
@@ -19,6 +19,9 @@ EMAIL_RECIPIENT=recipient@example.com
 # Discord configuration (required if NOTIFICATION_METHOD=discord)
 DISCORD_BOT_TOKEN=your_discord_bot_token
 DISCORD_CHANNEL_ID=your_discord_channel_id
+
+# Mattermost configuration (required if NOTIFICATION_METHOD=mattermost)
+MATTERMOST_WEBHOOK_URL=your_mattermost_webhook_url
 
 # RSS configuration (no additional settings needed if NOTIFICATION_METHOD=rss)
 # Feed will be available at http://localhost:8080/rss/feed
