--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hono": "^4.7.4",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "axios": "^1.9.0"
   }
 }
