--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,7 @@ DISCORD_CHANNEL_ID=your_discord_channel_id
 
 # Mattermost configuration (required if NOTIFICATION_METHOD=mattermost)
 MATTERMOST_WEBHOOK_URL=your_mattermost_webhook_url
+MATTERMOST_CHANNEL=your_mattermost_channel
 
 # RSS configuration (no additional settings needed if NOTIFICATION_METHOD=rss)
 # Feed will be available at http://localhost:8080/rss/feed
