build: clarify optional archived

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ NOTIFICATION_METHOD=email  # Options: email, discord, mattermost, or rss
 NOTIFICATION_FREQUENCY=daily  # or weekly, monthly
 BOOKMARKS_COUNT=3
 SPECIFIC_LIST_ID=''  # Leave empty for all bookmarks
-ONLY_UNARCHIVED=false  # Set to true to only send unarchived bookmarks
+ONLY_UNARCHIVED=false  # Set to true to only send unarchived bookmarks (optional)
 TIMEZONE=America/New_York  # Your local timezone (e.g., America/New_York, Europe/London, etc.)
 TIME_TO_SEND=09:00  # Time to send in 24-hour format (HH:MM)
 
