build: add telegram vars

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ HOARDER_API_KEY=your_api_key_here
 HOARDER_SERVER_URL=https://your-hoarder-instance.com
 
 # Notification settings
-NOTIFICATION_METHOD=email  # Options: email, discord, mattermost, or rss
+NOTIFICATION_METHOD=email  # Options: email, discord, mattermost, telegram, or rss
 NOTIFICATION_FREQUENCY=daily  # or weekly, monthly
 BOOKMARKS_COUNT=3
 SPECIFIC_LIST_ID=''  # Leave empty for all bookmarks
@@ -24,6 +24,10 @@ DISCORD_CHANNEL_ID=your_discord_channel_id
 # Mattermost configuration (required if NOTIFICATION_METHOD=mattermost)
 MATTERMOST_WEBHOOK_URL=your_mattermost_webhook_url
 MATTERMOST_CHANNEL=your_mattermost_channel
+
+# Telegram configuration (required if NOTIFICATION_METHOD=telegram)
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token
+TELEGRAM_CHAT_ID=your_telegram_chat_id
 
 # RSS configuration (no additional settings needed if NOTIFICATION_METHOD=rss)
 # Feed will be available at http://localhost:8080/rss/feed
